--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <!-- Hero -->
   <section class="hero">
-    <img src="logo.png" alt="Kalmus Labs Logo" class="logo">
+    <img src="logo21.png" alt="Kalmus Labs Logo" class="logo">
     <h1>Kalmus Labs</h1>
     <p>Building the future of learning with AI</p>
     <div class="hero-buttons">
