--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <!-- Footer -->
   <footer>
-    <img src="logo21.png" alt="Kalmus Labs Logo" class="footer-logo">
+    <img src="logo_main.png" alt="Kalmus Labs Logo" class="footer-logo">
     <p>© 2025 Kalmus Labs</p>
     <a href="https://www.linkedin.com" target="_blank" class="linkedin">LinkedIn</a>
   </footer>
