--- a/index.html
+++ b/index.html
@@ -1,61 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="logo.png" sizes="any">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Kalmus Labs</title>
-  <link rel="stylesheet" href="style.css">
+
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- Hero -->
   <section class="hero">
-    <img src="logo_main.png" alt="Kalmus Labs Logo" class="logo">
+    <div class="sky" aria-hidden="true"></div>
+    <img src="logo_main.png" alt="Kalmus Labs Logo" class="logo" />
     <h1>Kalmus Labs</h1>
-    <p>Building the future of learning with AI</p>
+    <p class="tagline">Study & tutoring — finally done right.</p>
+
     <div class="hero-buttons">
       <a href="mailto:founder@kalmuslabs.com" class="btn primary">Contact us</a>
       <a href="#join" class="btn secondary">Join us</a>
     </div>
+
+    <!-- Linear-style tilted preview -->
+    <div class="product-frame">
+      <!-- If you upload an actual screenshot, name it bookbuddy-preview.png -->
+      <img src="bookbuddy-preview.png" alt="BookBuddy preview" onerror="this.parentElement.classList.add('fallback')" />
+      <div class="product-fallback">
+        <div class="bb-title">BookBuddy</div>
+        <div class="bb-sub">Turn any document into a personal learning session</div>
+      </div>
+    </div>
   </section>
 
-  <!-- About -->
-  <section class="about">
-    <h2>About</h2>
-    <p>
-      At Kalmus Labs, we are building human-centered AI tools for learning.  
-      Our first prototype, <strong>BookBuddy</strong>, helps people engage with knowledge in a new way.
-    </p>
+  <!-- Purpose (Problem → Belief → Solution) -->
+  <section class="purpose" id="purpose">
+    <h2>Purpose</h2>
+    <div class="purpose-grid">
+      <article class="purpose-card reveal">
+        <h3>Problem</h3>
+        <p>
+          AI is reshaping work. People get reduced to spreadsheet rows. Learning still feels lonely:
+          PDFs, jargon, tab-hopping between translators and explainers — zero support, zero flow.
+        </p>
+        <ul class="bullets">
+          <li>No built-in help or translation</li>
+          <li>Constant context switching</li>
+          <li>No dialogue, no guidance</li>
+        </ul>
+      </article>
+
+      <article class="purpose-card reveal">
+        <h3>Belief</h3>
+        <p>
+          Work and study should feel human. We value equity, growth, and real ownership.
+          You shouldn’t wait for a layoff — you should build your future.
+        </p>
+        <ul class="bullets">
+          <li>Human-first, builder culture</li>
+          <li>Equity and long-term upside</li>
+          <li>Freedom, responsibility, momentum</li>
+        </ul>
+      </article>
+
+      <article class="purpose-card reveal">
+        <h3>Solution</h3>
+        <p>
+          We’re building human-centered AI tools for learning. Our first prototype,
+          <strong>BookBuddy</strong>, turns any document into a guided conversation that adapts to you.
+        </p>
+        <ul class="bullets">
+          <li>Explains concepts in plain language</li>
+          <li>Asks good questions; builds mastery</li>
+          <li>Feels like a tutor — not a chatbot</li>
+        </ul>
+      </article>
+    </div>
   </section>
 
   <!-- Join Us -->
   <section id="join" class="join">
     <h2>Join Us</h2>
+    <p class="join-sub">Build the future with us — not as a cog, but as an owner.</p>
+
     <div class="cards">
-      <div class="card">
+      <div class="card reveal">
         <h3>👨‍💻 Tech Lead</h3>
-        <p>Help us shape the technical vision and architecture.</p>
-        <a href="mailto:founder@kalmuslabs.com" class="btn small">Apply now</a>
+        <p>Shape the architecture and ship from MVP → v1.</p>
+        <ul class="mini">
+          <li>Equity from day one</li>
+          <li>Fast decisions, real ownership</li>
+          <li>LLM pipelines, quality foundations</li>
+        </ul>
+        <a href="mailto:founder@kalmuslabs.com?subject=Tech%20Lead%20—%20Kalmus%20Labs" class="btn small primary">Apply now</a>
       </div>
-      <div class="card">
+
+      <div class="card reveal">
         <h3>💻 Engineers</h3>
-        <p>Build innovative AI-powered products for education.</p>
-        <a href="mailto:founder@kalmuslabs.com" class="btn small">Apply now</a>
+        <p>Build AI-powered products for real learners.</p>
+        <ul class="mini">
+          <li>Ship end-to-end features</li>
+          <li>Use AI as a force multiplier</li>
+          <li>Grow into core roles</li>
+        </ul>
+        <a href="mailto:founder@kalmuslabs.com?subject=Engineer%20—%20Kalmus%20Labs" class="btn small primary">Apply now</a>
       </div>
-      <div class="card">
+
+      <div class="card reveal">
         <h3>🎨 Designer</h3>
-        <p>Create beautiful and intuitive user experiences.</p>
-        <a href="mailto:founder@kalmuslabs.com" class="btn small">Apply now</a>
+        <p>Create interfaces that feel calm, clear, and alive.</p>
+        <ul class="mini">
+          <li>Human-centered learning UX</li>
+          <li>Visual identity & motion</li>
+          <li>Own craft, shape the brand</li>
+        </ul>
+        <a href="mailto:founder@kalmuslabs.com?subject=Designer%20—%20Kalmus%20Labs" class="btn small primary">Apply now</a>
       </div>
     </div>
   </section>
 
   <!-- Footer -->
   <footer>
-    <img src="logo_main.png" alt="Kalmus Labs Logo" class="footer-logo">
+    <img src="logo_main.png" alt="Kalmus Labs Logo" class="footer-logo" />
     <p>© 2025 Kalmus Labs</p>
-    <a href="https://www.linkedin.com/company/kalmuslabs/" target="_blank" class="linkedin">LinkedIn</a>
+    <a href="https://www.linkedin.com" target="_blank" class="linkedin">LinkedIn</a>
   </footer>
+
+  <!-- Minimal reveal-on-scroll -->
+  <script>
+    const io = new IntersectionObserver((entries) => {
+      entries.forEach(e => {
+        if (e.isIntersecting) {
+          e.target.classList.add('in');
+          io.unobserve(e.target);
+        }
+      });
+    }, { threshold: 0.18 });
+
+    document.querySelectorAll('.reveal').forEach(el => io.observe(el));
+  </script>
 </body>
 </html>
