--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="sky" aria-hidden="true"></div>
     <img src="logo_main.png" alt="Kalmus Labs Logo" class="logo" />
     <h1>Kalmus Labs</h1>
-    <p class="tagline">Study & tutoring — finally done right.</p>
+    <p class="tagline">Study & tutoring - finally feels right.</p>
 
     <div class="hero-buttons">
       <a href="mailto:founder@kalmuslabs.com" class="btn primary">Contact us</a>
