--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Linear-style tilted preview -->
     <div class="product-frame">
       <!-- If you upload an actual screenshot, name it bookbuddy-preview.png -->
-      <img src="bookbuddy-preview.png" alt="BookBuddy preview" onerror="this.parentElement.classList.add('fallback')" />
+      <img src="BD.png" alt="BookBuddy preview" onerror="this.parentElement.classList.add('fallback')" />
       <div class="product-fallback">
         <div class="bb-title">BookBuddy</div>
         <div class="bb-sub">Turn any document into a personal learning session</div>
