--- a/index.html
+++ b/index.html
@@ -27,14 +27,17 @@
     </div>
 
     <!-- Linear-style tilted preview -->
-    <div class="product-frame">
-      <!-- If you upload an actual screenshot, name it bookbuddy-preview.png -->
-      <img src="BD.png" alt="BookBuddy preview" onerror="this.parentElement.classList.add('fallback')" />
-      <div class="product-fallback">
-        <div class="bb-title">BookBuddy</div>
-        <div class="bb-sub">Turn any document into a personal learning session</div>
-      </div>
-    </div>
+    <div class="product-frame slider">
+  <div class="slides">
+    <img src="BD.png" alt="BookBuddy preview 1" />
+    <img src="BD2.png" alt="BookBuddy preview 2" />
+    <img src="BD3.png" alt="BookBuddy preview 3" />
+  </div>
+  <div class="slider-caption">
+    <h3>BookBuddy</h3>
+    <p>Turn any document into a personal learning session.</p>
+  </div>
+</div>
   </section>
 
   <!-- Purpose (Problem → Belief → Solution) -->
