--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <h3>Problem</h3>
         <p>
           AI is reshaping work. People get reduced to spreadsheet rows. Learning still feels lonely:
-          PDFs, jargon, tab-hopping between translators and explainers — zero support, zero flow.
+          PDFs, jargon, tab-hopping between translators and explainers - zero support, zero flow.
         </p>
         <ul class="bullets">
           <li>No built-in help or translation</li>
@@ -61,7 +61,7 @@
         <h3>Belief</h3>
         <p>
           Work and study should feel human. We value equity, growth, and real ownership.
-          You shouldn’t wait for a layoff — you should build your future.
+          You shouldn’t wait for a layoff - you should build your future.
         </p>
         <ul class="bullets">
           <li>Human-first, builder culture</li>
@@ -79,7 +79,7 @@
         <ul class="bullets">
           <li>Explains concepts in plain language</li>
           <li>Asks good questions; builds mastery</li>
-          <li>Feels like a tutor — not a chatbot</li>
+          <li>Feels like a tutor - not a chatbot</li>
         </ul>
       </article>
     </div>
@@ -88,7 +88,7 @@
   <!-- Join Us -->
   <section id="join" class="join">
     <h2>Join Us</h2>
-    <p class="join-sub">Build the future with us — not as a cog, but as an owner.</p>
+    <p class="join-sub">Build the future with us - not as a cog, but as an owner.</p>
 
     <div class="cards">
       <div class="card reveal">
