--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </div>
 
     <!-- Linear-style tilted preview -->
-    <div class="product-frame slider">
+    <div class="product-frame">
   <div class="slides">
-    <img src="BD.png" alt="BookBuddy preview 1" />
-    <img src="BD2.png" alt="BookBuddy preview 2" />
-    <img src="BD3.png" alt="BookBuddy preview 3" />
+    <div class="slide"><img src="BD.png" alt="BookBuddy screen 1"></div>
+    <div class="slide"><img src="BB.png" alt="BookBuddy screen 2"></div>
+    <div class="slide"><img src="3d318c0f.png" alt="BookBuddy screen 3"></div>
   </div>
   <div class="slider-caption">
     <h3>BookBuddy</h3>
