--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
 
     <!-- Linear-style tilted preview -->
     <div class="product-frame">
-  <div class="slides">
-    <div class="slide"><img src="BD.png" alt="BookBuddy screen 1"></div>
-    <div class="slide"><img src="BB.png" alt="BookBuddy screen 2"></div>
-    <div class="slide"><img src="3d318c0f.png" alt="BookBuddy screen 3"></div>
+  <div class="scroll-container">
+    <img src="BD.png" alt="BookBuddy preview">
   </div>
   <div class="slider-caption">
     <h3>BookBuddy</h3>
