--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <link rel="icon" href="favicon.ico">
   <link rel="icon" type="image/png" href="logo.png" sizes="any">
 
-  <!-- Fonts -->
+  <!-- Fonts (Outfit + Manrope, с предзагрузкой) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&family=Outfit:wght@600;800&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css" />
@@ -74,7 +76,7 @@
     </div>
   </section>
 
-  <!-- BookBuddy Preview -->
+  <!-- BookBuddy Preview (между Purpose и Join Us) -->
   <section class="product seam-both">
     <div class="product-wrap reveal">
       <div class="product-perspective">
@@ -144,7 +146,7 @@
 
   <!-- Sequencing + Reveal -->
   <script>
-    // последовательная загрузка сверху вниз
+    // последовательная загрузка сверху вниз — вернул
     const seqEls = [...document.querySelectorAll('.seq')];
     seqEls.forEach((el, i) => {
       el.style.setProperty('--d', `${i * 110}ms`);
@@ -152,12 +154,10 @@
       requestAnimationFrame(() => el.classList.add('in'));
     });
 
-    // reveal с плавным появлением/исчезновением
+    // reveal с плавным входом/выходом, без дрожи
     const io = new IntersectionObserver((entries) => {
-      entries.forEach(e => {
-        if (e.isIntersecting) e.target.classList.add('in');
-        else e.target.classList.remove('in');
-      });
+      entries.forEach(e => e.isIntersecting ? e.target.classList.add('in')
+                                            : e.target.classList.remove('in'));
     }, { threshold: [0, 0.18, 0.35], rootMargin: '0px 0px -18% 0px' });
 
     document.querySelectorAll('.reveal').forEach(el => {
