--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   <link rel="icon" href="favicon.ico">
   <link rel="icon" type="image/png" href="logo.png" sizes="any">
 
-  <!-- Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&family=Outfit:wght@600;800&display=swap" rel="stylesheet">
+  <!-- Fonts (no @import in CSS; fast + reliable) -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;600;700&family=Space+Grotesk:wght@600;700&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css" />
 </head>
@@ -21,7 +23,7 @@
 
     <img src="logo_main.png" alt="Kalmus Labs Logo" class="logo seq" />
     <h1 class="seq">Kalmus Labs</h1>
-    <p class="tagline seq">Study & tutoring - finally feels right.</p>
+    <p class="tagline seq">Study & tutoring — finally feels right.</p>
 
     <div class="hero-buttons seq">
       <a href="mailto:founder@kalmuslabs.com" class="btn primary">Contact us</a>
@@ -37,7 +39,7 @@
         <h3>Problem</h3>
         <p>
           AI is reshaping work. People get reduced to spreadsheet rows. Learning still feels lonely:
-          PDFs, jargon, tab-hopping between translators and explainers - zero support, zero flow.
+          PDFs, jargon, tab-hopping between translators and explainers — zero support, zero flow.
         </p>
         <ul class="bullets">
           <li>No built-in help or translation</li>
@@ -50,7 +52,7 @@
         <h3>Belief</h3>
         <p>
           Work and study should feel human. We value equity, growth, and real ownership.
-          You should not wait for a layoff - you should build your future.
+          You should not wait for a layoff — you should build your future.
         </p>
         <ul class="bullets">
           <li>Human-first, builder culture</li>
@@ -68,7 +70,7 @@
         <ul class="bullets">
           <li>Explains concepts in plain language</li>
           <li>Asks good questions; builds mastery</li>
-          <li>Feels like a tutor - not a chatbot</li>
+          <li>Feels like a tutor — not a chatbot</li>
         </ul>
       </article>
     </div>
@@ -97,12 +99,12 @@
   <!-- Join Us -->
   <section id="join" class="join seam-top">
     <h2 class="seq">Join Us</h2>
-    <p class="join-sub seq">Build the future with us - not as a cog, but as an owner.</p>
+    <p class="join-sub seq">Build the future with us — not as a cog, but as an owner.</p>
 
     <div class="cards">
       <div class="card reveal">
         <h3>👨‍💻 Tech Lead</h3>
-        <p>Shape the architecture and ship from MVP -> v1.</p>
+        <p>Shape the architecture and ship from MVP → v1.</p>
         <ul class="mini">
           <li>Equity from day one</li>
           <li>Fast decisions, real ownership</li>
@@ -133,18 +135,18 @@
         <a href="mailto:founder@kalmuslabs.com?subject=Designer%20-%20Kalmus%20Labs" class="btn small primary equal-btn">Apply now</a>
       </div>
     </div>
-  </section>
 
-  <!-- Footer -->
-  <footer>
-    <img src="logo_main.png" alt="Kalmus Labs Logo" class="footer-logo" />
-    <p>© 2025 Kalmus Labs</p>
-    <a href="https://www.linkedin.com" target="_blank" class="linkedin">LinkedIn</a>
-  </footer>
+    <!-- Footer lives INSIDE the final gradient block -->
+    <footer>
+      <img src="logo_main.png" alt="Kalmus Labs Logo" class="footer-logo" />
+      <p>© 2025 Kalmus Labs</p>
+      <a href="https://www.linkedin.com" target="_blank" class="linkedin">LinkedIn</a>
+    </footer>
+  </section>
 
   <!-- Sequencing + Reveal -->
   <script>
-    // последовательная загрузка сверху вниз (вернул анимацию)
+    // последовательная загрузка сверху вниз
     const seqEls = [...document.querySelectorAll('.seq')];
     seqEls.forEach((el, i) => {
       el.style.setProperty('--d', `${i * 110}ms`);
@@ -152,7 +154,7 @@
       requestAnimationFrame(() => el.classList.add('in'));
     });
 
-    // reveal: добавляем ОДИН РАЗ (без remove) — меньше мерцаний на телефонах
+    // reveal (без remove — стабильнее на мобилах)
     const io = new IntersectionObserver((entries) => {
       entries.forEach(e => { if (e.isIntersecting) e.target.classList.add('in'); });
     }, { threshold: 0.18, rootMargin: '0px 0px -14% 0px' });
