--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <img src="logo_main.png" alt="Kalmus Labs Logo" class="logo seq" />
     <h1 class="seq">Kalmus Labs</h1>
-    <p class="tagline seq">Study & tutoring — finally feels right.</p>
+    <p class="tagline seq">Study & tutoring - finally feels right.</p>
 
     <div class="hero-buttons seq">
       <a href="mailto:founder@kalmuslabs.com" class="btn primary">Contact us</a>
@@ -39,7 +39,7 @@
         <h3>Problem</h3>
         <p>
           AI is reshaping work. People get reduced to spreadsheet rows. Learning still feels lonely:
-          PDFs, jargon, tab-hopping between translators and explainers — zero support, zero flow.
+          PDFs, jargon, tab-hopping between translators and explainers - zero support, zero flow.
         </p>
         <ul class="bullets">
           <li>No built-in help or translation</li>
@@ -52,7 +52,7 @@
         <h3>Belief</h3>
         <p>
           Work and study should feel human. We value equity, growth, and real ownership.
-          You should not wait for a layoff — you should build your future.
+          You should not wait for a layoff - you should build your future.
         </p>
         <ul class="bullets">
           <li>Human-first, builder culture</li>
@@ -70,7 +70,7 @@
         <ul class="bullets">
           <li>Explains concepts in plain language</li>
           <li>Asks good questions; builds mastery</li>
-          <li>Feels like a tutor — not a chatbot</li>
+          <li>Feels like a tutor - not a chatbot</li>
         </ul>
       </article>
     </div>
@@ -99,7 +99,7 @@
   <!-- Join Us -->
   <section id="join" class="join seam-top">
     <h2 class="seq">Join Us</h2>
-    <p class="join-sub seq">Build the future with us — not as a cog, but as an owner.</p>
+    <p class="join-sub seq">Build the future with us - not as a cog, but as an owner.</p>
 
     <div class="cards">
       <div class="card reveal">
