--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <footer>
       <img src="logo_main.png" alt="Kalmus Labs Logo" class="footer-logo" />
       <p>© 2025 Kalmus Labs</p>
-      <a href="https://www.linkedin.com" target="_blank" class="linkedin">LinkedIn</a>
+      <a href="https://www.linkedin.com/company/kalmuslabs" target="_blank" class="linkedin">LinkedIn</a>
     </footer>
   </section>
 
