--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
   <title>Kalmus Labs</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="favicon.ico">
-  <link rel="icon" type="image/png" href="logo.png" sizes="any">
+  <link rel="icon" type="image/png" href="logo_main.png" sizes="any">
+  <link rel="apple-touch-icon" href="logo_main.png">
+  <meta name="theme-color" content="#2A4D9B">
 
   <!-- Google Font for body -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
