--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <li>Fast decisions, real ownership</li>
           <li>LLM pipelines, quality foundations</li>
         </ul>
-        <a href="mailto:founder@kalmuslabs.com?subject=Tech%20Lead%20-%20Kalmus%20Labs" class="btn small primary equal-btn">Apply now</a>
+        <a href="https://wellfound.com/l/2BEAUM" target="_blank" class="btn small primary equal-btn">Apply now</a>
       </div>
 
       <div class="card reveal">
