--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <title>Kalmus Labs</title>
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="logo_main.png" sizes="any">
-  <link rel="apple-touch-icon" href="logo_main.png">
-  <meta name="theme-color" content="#2A4D9B">
+<link rel="icon" type="image/png" href="logo_main.png" sizes="32x32">
+<link rel="icon" type="image/png" href="logo_main.png" sizes="192x192">
+<link rel="apple-touch-icon" href="logo_main.png">
+<link rel="shortcut icon" href="logo_main.png">
+<link rel="manifest" href="manifest.json">
 
   <!-- Google Font for body -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
